# cas-jupyter

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
krauncher_magic/: __init__.py  codegen.py  magic.py  transfer.py
tests/: test_magic.py  test_roundtrip.py
tutorial/: 01-first-cell.ipynb  10-progress-bar.ipynb  14-custom-model.imdb  14-custom-model.ipynb  20-bert-imdb.ipynb  21-qwen-lora-alpaca.ipynb  50-run-code-values.ipynb  51-estimate-then-run.ipynb  52-group-envelope.ipynb  53-hf-native.ipynb  54-s3-native.ipynb  colab-egress-validation.ipynb
