[project]
name = "krauncher-jupyter"
version = "0.1.0"
description = "Krauncher %%krauncher cell magic — run notebook cells on the cheapest remote GPU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.0",
    # krauncher (cas-client) must be importable; installed separately —
    # it is not on PyPI yet: pip install -e ../cas-client
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["krauncher_magic"]

[tool.ruff]
line-length = 100
